--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <a href="/index.html">FLEXBOX PAGE</a>and<a href="/GRID/grid.html">GRID PAGE</a>
     <main>
       <div class="container">
         <div class="Sedans gen_cars">
